--- a/Flutter/dropbox_download_db_run_app/pubspec.yaml
+++ b/Flutter/dropbox_download_db_run_app/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^3.0.10
+  path_provider: ^1.6.27
+  file_utils: ^0.1.4
+  
+  permission_handler: ^5.1.0+2
 
 dev_dependencies:
   flutter_test:
