--- a/Flutter/dropbox_download_db_run_app/pubspec.yaml
+++ b/Flutter/dropbox_download_db_run_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: ^3.0.10
   path_provider: ^1.6.27
   file_utils: ^0.1.4
+  sqflite: ^1.3.2+3
   
   permission_handler: ^5.1.0+2
 
